# yt-api-mock

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.tls.yml  run-tests.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dev-container.yml  release.yml  versioning.yml
crates/control_service/: Cargo.toml
crates/control_service/src/: lib.rs
crates/datastore/: Cargo.toml
crates/datastore/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/live_chat_service/: Cargo.toml  build.rs
crates/live_chat_service/src/: lib.rs
crates/oauth_service/: Cargo.toml
crates/oauth_service/src/: lib.rs
crates/proto-services/: Cargo.toml  build.rs
crates/proto-services/src/: lib.rs
crates/video_service/: Cargo.toml  build.rs
crates/video_service/proto/: videos_list.proto
crates/video_service/src/: lib.rs
nginx/: README.md  generate-certs.sh  nginx.conf
nginx/certs/: .gitkeep
proto/: helloworld.proto
server/: Cargo.toml
server/src/: main.rs
tests/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.auth.yml  docker-compose.tls.yml  docker-compose.yml  generate-tls-certs.sh  package-lock.json  package.json
tests/specs/: auth_grpc.spec  auth_rest.spec  control_endpoints.spec  oauth-auth.spec  oauth-core.spec  oauth.spec  pagination_messages.csv  stream_list.spec  stream_list_empty.spec  stream_list_pagination.spec  tls.spec  videos_list.spec
tests/tests/: step_implementation.js
