[workspace]
resolver = "2"
members = [
    "server",
    "crates/*",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuge42/yt-api-mock"
readme = "README.md"
authors = ["yuge42"]
description = "YouTube API mock server"
version = "0.1.0"
