[workspace]
resolver = "2"
members = [
    "server",
    "crates/*",
]

[workspace.dependencies]
tonic = "0.14.2"
tonic-build = "0.14.2"
tonic-reflection = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
prost = "0.14"
prost-build = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuge42/yt-api-mock"
readme = "README.md"
authors = ["yuge42"]
description = "YouTube API mock server"
version = "0.1.0"
