[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true }
live_chat_service = { path = "../crates/live_chat_service" }
video_service = { path = "../crates/video_service" }
control_service = { path = "../crates/control_service" }
datastore = { path = "../crates/datastore" }
tonic-reflection = { workspace = true }
tower = "0.5"
http = "1"
axum = { workspace = true }
