[package]
name = "datastore"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
description.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
domain = { path = "../domain" }
chrono = "0.4"
