[package]
name = "domain"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
description.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
