[package]
name = "live_chat_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
datastore = { path = "../datastore" }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
tonic-prost-build = { workspace = true }
