[package]
name = "proto-services"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
prost.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true

[build-dependencies]
tonic-build.workspace = true
